New classes and structure

--- a/index.html
+++ b/index.html
@@ -8,44 +8,47 @@
 </head>
 <body>
 
-<div class="returnResult">
+    <div class="button-box">
+        <button class="rock">
+            <img src="./images/therock2pop.jpg" width="200px" height="300px" alt="rock">
+        </button>
+        <button class="paper">
+            <img src="./images/michaelpop2.jpg" width="200px" height="300px" alt="paper">
+        </button>
+        <button class="scissors">
+            <img src="./images/edpop.jpg" width="200px" height="300px" alt="scissors">
+        </button>
+    </div>
 
-</div>
-<div class="winner">
-
-</div>
-
-<div id="topbox">
-
-    <button class="restart">restart</button>
+<div class="score-container">
+   
+  <div class ="sub-container1">  
     <div class="computerScore">computer: 0
     <div class="computerScoreNum">0</div>
     <div class="computer">computer</div>
-</div>
-
-  
-<div id="middlebox">
-    <button class="rock">
-        <img src="./images/therock2pop.jpg" width="200px" height="300px" alt="rock">
-    </button>
-    <button class="paper">
-        <img src="./images/michaelpop2.jpg" width="200px" height="300px" alt="paper">
-    </button>
-    <button class="scissors">
-        <img src="./images/edpop.jpg" width="200px" height="300px" alt="scissors">
-    </button>
-
-</div>
+  </div>
+  <div class="sub-container3">
+  <button class="restart">restart</button>
+  </div>
+  <div class="sub-container2">
     <div class="playerScore">player: 0
     <div class="playerScoreNum">0</div>
-    <div class="player">player</div>
-<div id="bottombox">
-
-
+    <div class="player">player</div> 
+  </div>  
+    <div class="returnResult">
+    <div class="winner">
 </div>
 
 
-</div>
+
+   
+
+
+
+  
+
+
+
 
 </div>
 
