--- a/index.html
+++ b/index.html
@@ -10,33 +10,40 @@
 
     <div class="button-box">
         <button class="rock">
-            <img src="./images/therock2pop.jpg" width="200px" height="300px" alt="rock">
+            <img src="./images/therock2pop.jpg" width="210px" height="240px" alt="rock">
         </button>
         <button class="paper">
-            <img src="./images/michaelpop2.jpg" width="200px" height="300px" alt="paper">
+            <img src="./images/michaelpop2.jpg" width="210px" height="240px" alt="paper">
         </button>
         <button class="scissors">
-            <img src="./images/edpop.jpg" width="200px" height="300px" alt="scissors">
+            <img src="./images/edpop.jpg" width="210px" height="240px" alt="scissors">
         </button>
     </div>
 
 <div class="score-container">
    
   <div class ="sub-container1">  
-    <div class="computerScore">computer: 0
+    <div class="computerScore">computer
     <div class="computerScoreNum">0</div>
     <div class="computer">computer</div>
+    <div class="returnResult"></div>
+   
   </div>
   <div class="sub-container3">
-  <button class="restart">restart</button>
+  <button class="restart">
+    <img src="./images/reset2.jpg" width="170px" height="80px" alt="restart">
+  </button>
+ 
   </div>
   <div class="sub-container2">
-    <div class="playerScore">player: 0
+    <div class="playerScore">player
     <div class="playerScoreNum">0</div>
     <div class="player">player</div> 
+    <div class="winner"></div>
+  
   </div>  
-    <div class="returnResult">
-    <div class="winner">
+  
+ 
 </div>
 
 
